# BobVLM

./: README.md  model_script.py  pyproject.toml
src/BobVLM/: __init__.py  pipeline.py  processor.py
src/BobVLM/data/: __init__.py  train_script.py
src/BobVLM/model/: __init__.py  pretrained.py
src/BobVLM/train/: train_script.py
